--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "ytchatmonitor2/jsmn"]
 	path = ytchatmonitor2/jsmn
 	url = https://github.com/zserge/jsmn.git
+[submodule "ytchatmonitor_discord_bridge/cntools"]
+	path = ytchatmonitor_discord_bridge/cntools
+	url = https://github.com/cnlohr/cntools
