--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "jsmn"]
 	path = jsmn
 	url = https://github.com/zserge/jsmn.git
+[submodule "id3tool/id3v2lib"]
+	path = id3tool/id3v2lib
+	url = https://github.com/larsbs/id3v2lib
