--- a/ytoauthhelper/Makefile
+++ b/ytoauthhelper/Makefile
@@ -1,8 +1,11 @@
-all : ytoauthhelper
+all : ytoauthhelper ytrefreshtoken
 
-CNTOOLS:= \
+CNTOOLS_CLIENT:= \
 	../cntools/ssl/cnhttpclient.c \
 	../cntools/ssl/cnsslclient.c \
+	../cntools/ssl/cnhttpcommon.c
+
+CNTOOLS:= \
 	../cntools/http/mfs.c \
 	../cntools/http/sha1.c \
 	../cntools/http/cnhttp.c \
@@ -11,10 +14,13 @@ CNTOOLS:= \
 LDFLAGS:=-lssl -lcrypto
 CFLAGS:=-g -I../cntools/ssl -I../jsmn -I../cntools/http -DMAX_HTTP_PATHLEN=500
 
-ytoauthhelper : ytoauthhelper.c $(CNTOOLS) $(JSMN)
+ytoauthhelper : ytoauthhelper.c $(CNTOOLS) $(CNTOOLS_CLIENT)
 	gcc -o $@ $^ $(CFLAGS) $(LDFLAGS)
 
+ytrefreshtoken : ytrefreshtoken.c $(CNTOOLS_CLIENT)
+	gcc -o $@ $^ $(CFLAGS) $(LDFLAGS) -DMAKE_EXE
+
 clean :
-	rm -rf *.o *~ chatmon
+	rm -rf *.o *~ ytrefreshtoken ytrefreshtoken
 
 
