--- a/ytoauthhelper/Makefile
+++ b/ytoauthhelper/Makefile
@@ -2,8 +2,7 @@ all : ytoauthhelper ytrefreshtoken
 
 CNTOOLS_CLIENT:= \
 	../cntools/ssl/cnhttpclient.c \
-	../cntools/ssl/cnsslclient.c \
-	../cntools/ssl/cnhttpcommon.c
+	../cntools/ssl/cnsslclient.c
 
 CNTOOLS:= \
 	../cntools/http/mfs.c \
@@ -12,12 +11,12 @@ CNTOOLS:= \
 	../cntools/http/http_bsd.c
 
 LDFLAGS:=-lssl -lcrypto
-CFLAGS:=-g -I../cntools/ssl -I../jsmn -I../cntools/http -DMAX_HTTP_PATHLEN=500
+CFLAGS:=-g -I../cntools/ssl -I../cntools -I../cntools/http -DMAX_HTTP_PATHLEN=500
 
 ytoauthhelper : ytoauthhelper.c $(CNTOOLS) $(CNTOOLS_CLIENT)
 	gcc -o $@ $^ $(CFLAGS) $(LDFLAGS)
 
-ytrefreshtoken : ytrefreshtoken.c $(CNTOOLS_CLIENT)
+ytrefreshtoken : ytrefreshtoken.c $(CNTOOLS_CLIENT) ../cntools/ssl/cnhttpcommon.c
 	gcc -o $@ $^ $(CFLAGS) $(LDFLAGS) -DMAKE_EXE
 
 clean :
