1st working version with the V1 API

--- a/ytchatmon/Makefile
+++ b/ytchatmon/Makefile
@@ -5,7 +5,7 @@ CNTOOLS:= \
 	../cntools/ssl/cnhttpcommon.c \
 	../cntools/ssl/cnsslclient.c
 
-JSMN:=../jsmn/jsmn.c
+JSMN:=../jsmn/jsmn.h
 
 LDFLAGS:=-lssl -lcrypto
 CFLAGS:=-g -I../cntools/ssl -I../jsmn
